Update multiple properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
-#region register
+#region client
 client.username.exists=Client with this username already exists
-#endregion register
-#region login
 incorrect.username.or.password=Incorrect username or password
-#endregion login
+#endregion client
+#region properties
+property.dto.required=PropertyDTO id is required
+#endregion properties
